# gameoflifecpppolymorph

./: CMakeLists.txt  GameOfLifeCpp.cpp  README.md
Config/: CMakeLists.txt  Config.h
Game/: CMakeLists.txt  Cell.h  CellState.h  CliOutputController.h  Command.h  GameController.cpp  GameController.h  GameOfLifeController.h  GameOfLifeManager.cpp  GameOfLifeManager.h  GameOfLifeState.h  KeyboardInputController.cpp  KeyboardInputController.h
Interfaces/: CMakeLists.txt  CommandType.h  ICommand.h  IGameController.h  IGameState.h  IInputController.h  IOutputController.h
Utility/: CMakeLists.txt  Matrix.cpp  Matrix.h
